# Maia_Shell

./: CMakeLists.txt  NOTES.txt  README.md
Maia/BackendLib/: AppsListModel.cpp  AppsListModel.hpp  Backend.cpp  Backend.hpp  CMakeLists.txt  MIconItem.cpp  MIconItem.hpp  MTaskbarBaseModel.cpp  MWindowBlur.cpp  MWindowBlur.hpp  cmake_config.h.in
Maia/BackendLib/cutefish/: applicationmodel.cpp  applicationmodel.h  xwindowinterface.h
Maia/BackendLib/cutefish/dock/: applicationmodel.cpp  utils.h  xwindowinterface.cpp
Maia/BackendLib/cutefish/fishui/: MWindowShadow.cpp  MWindowShadow.h  boxshadowrenderer.cpp  iconthemeprovider.cpp  tileset.h
Maia/BackendLib/cutefish/launcher/: appitem.cpp  appitem.h  iconitem.cpp  iconitem.h  launchermodel.cpp  launchermodel.h  pagemodel.h  processproviderlauncher.cpp  processproviderlauncher.h
Maia/BackendLib/cutefish/statusbar/: MActivity.cpp  MActivity.hpp  MBackgroundHelper.cpp  MBackgroundHelper.h  MMenuPopupWindow.cpp  MMenuPopupWindow.h  capplications.cpp  capplications.h
Maia/BackendLib/private/: MaskAlgorithm.hpp
Maia/BackendLib/scxml/: GuiManagerStateMachine.scxml
Maia/BackendLib/server/: FavoriteAppsListModel.hpp  FavoriteAppsService.cpp  FrontendManagerService.cpp  GuiManager.cpp  GuiManager.hpp  LocaleSettingsService.cpp  LocaleSettingsService.hpp  QmlGui.cpp  QmlGui.hpp  Server.cpp  Server.hpp  X11WindowManagerService.cpp
Maia/Client/: CMakeLists.txt  MLocaleSettings.cpp  MLocaleSettings.hpp
Maia/ClientLib/: CMakeLists.txt  MLocaleSettings.cpp  MLocaleSettings.hpp
Maia/CutefishMod/: CMakeLists.txt  Main.qml  qmldir
Maia/CutefishMod/FishUI/: DesktopMenu.qml  Theme.qml  Units.qml
Maia/CutefishMod/contents/: DockContent.qml  WallpaperContent.qml
Maia/CutefishMod/control_center/: ControlCenter.qml
Maia/CutefishMod/items/: AppItem.qml  DockItem.qml
Maia/CutefishMod/launcher/: AllAppsView.qml  AppsLauncherWindow.qml  GridItemDelegate.qml  LauncherContent.qml
Maia/CutefishMod/menu/: ChangeFrontendMenu.qml
Maia/CutefishMod/popups/: PopupTips.qml
Maia/CutefishMod/statusbar/: StandardItem.qml  StatusbarContent.qml  StatusbarWindow.qml
Maia/CutefishMod/windows/: DockWindow.qml
Maia/DeployFiles/: run_logger.sh  run_maia_in_xephyr.sh
Maia/GnomeMod/: CMakeLists.txt  Main.qml  SidePanelContent.qml
Maia/GnomeMod/contents/: AppLauncherContent.qml  ControlBoardContent.qml
Maia/GnomeMod/hussars/: TaskbarContent.qml
Maia/GnomeMod/windows/: AppsLauncherWindow.qml
Maia/LoggerApp/: CMakeLists.txt  LoggerBackend.cpp  LoggerBackend.hpp  Main.qml  Server.cpp  Server.hpp  main.cpp
Maia/MaiaServerApp/: CMakeLists.txt  logger.cpp  logger.hpp  maia_0.1.0-desktop.desktop  main.cpp
Maia/MaiaServerApp/XPFrontend/: CMakeLists.txt  Main.qml  WallpaperContent.qml
Maia/MaiaServerApp/XPFrontend/components/: LicenseWarning.qml
Maia/UILib/: CMakeLists.txt  MControlCenterDialog.cpp  MControlCenterDialog.hpp
Maia/XPLunaMod/: CMakeLists.txt  LogoutContent.qml  Main.qml  TaskbarButton.qml  TaskbarContent.qml  TurnOffContent.qml  WallpaperContent.qml
Maia/XPLunaMod/components/: LicenseWarning.qml
Maia/XPLunaMod/contents/: AppMenuContent.qml  SystemVolumeContent.qml
Maia/XPLunaMod/mask/: MainMask.qml  WindowOverlay.qml
Maia/XPLunaMod/style_items/: XPMenu.qml  XPMenuItem.qml  XPMenuSeparator.qml
Maia/XPLunaMod/windows/: Clock3DWindow.qml
graphics_projects/: Windows xp menu.xcf
